--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 /shaderpacks/
 /tcnodetracker/
 /config/draconicevolution/
+/llibrary/
 
 # Custom Ore Gen default templates #
 /config/CustomOreGen/modules/default/
