--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4924,6 +4924,7 @@ eln {
     B:ElnSixNode.128=false
     B:ElnSixNode.136=false
     B:ElnSixNode.192=false
+    B:ElnSixNode.193=false
     B:ElnSixNode.2048=false
     B:ElnSixNode.2052=false
     B:ElnSixNode.2056=false
@@ -4937,12 +4938,15 @@ eln {
     B:ElnSixNode.4102=false
     B:ElnSixNode.4103=false
     B:ElnSixNode.4104=false
+    B:ElnSixNode.4105=false
     B:ElnSixNode.4108=false
     B:ElnSixNode.4109=false
     B:ElnSixNode.4160=false
     B:ElnSixNode.4224=false
     B:ElnSixNode.4225=false
     B:ElnSixNode.4228=false
+    B:ElnSixNode.4289=false
+    B:ElnSixNode.4290=false
     B:ElnSixNode.5888=false
     B:ElnSixNode.5896=false
     B:ElnSixNode.5904=false
@@ -4953,6 +4957,7 @@ eln {
     B:ElnSixNode.6017=false
     B:ElnSixNode.6018=false
     B:ElnSixNode.6019=false
+    B:ElnSixNode.6020=false
     B:ElnSixNode.6080=false
     B:ElnSixNode.6081=false
     B:ElnSixNode.6088=false
@@ -4963,6 +4968,9 @@ eln {
     B:ElnSixNode.6152=false
     B:ElnSixNode.6176=false
     B:ElnSixNode.6178=false
+    B:ElnSixNode.6180=false
+    B:ElnSixNode.6181=false
+    B:ElnSixNode.6182=false
     B:ElnSixNode.6208=false
     B:ElnSixNode.6209=false
     B:ElnSixNode.6210=false
@@ -4984,6 +4992,7 @@ eln {
     B:ElnSixNode.6664=false
     B:ElnSixNode.6668=false
     B:ElnSixNode.6669=false
+    B:ElnSixNode.6670=false
     B:ElnSixNode.6912=false
     B:ElnSixNode.6913=false
     B:ElnSixNode.6976=false
@@ -4993,6 +5002,18 @@ eln {
     B:ElnSixNode.7492=false
     B:ElnSixNode.7493=false
     B:ElnSixNode.7496=false
+    B:ElnSixNode.7552=false
+    B:ElnSixNode.7553=false
+    B:ElnSixNode.7554=false
+    B:ElnSixNode.7555=false
+    B:ElnSixNode.7556=false
+    B:ElnSixNode.7557=false
+    B:ElnSixNode.7558=false
+    B:ElnSixNode.7559=false
+    B:ElnSixNode.7560=false
+    B:ElnSixNode.7561=false
+    B:ElnSixNode.7562=false
+    B:ElnSixNode.7563=false
     B:ElnTransparentNode=false
     B:ElnghostBlock=false
     B:ElnlightBlock=false
@@ -6350,6 +6371,111 @@ forestry {
     B:stairsFireproof.8=false
     B:stairsFireproof.9=false
     B:stump=false
+}
+
+
+fossil {
+    B:AnubiteStatue=false
+    B:amberOre=true
+    B:analyzer=false
+    B:analyzerActive=false
+    B:ancientChest=false
+    B:ancientGlass=false
+    B:ancientStone=true
+    B:ancientStoneSlab=false
+    B:ancientStoneStairs=false
+    B:ancientStonebrick=true
+    B:ancientWood=true
+    B:ancientWoodPillar=true
+    B:ancientWoodPlate=false
+    B:ancientWoodSlab=false
+    B:ancientWoodStairs=false
+    B:anublock=false
+    B:anuportal=false
+    B:bubbleMachine=true
+    B:cultureVat=false
+    B:cultureVatActive=false
+    B:denseSand=true
+    B:feederActive=false
+    B:feederIdle=false
+    B:fernBlock=false
+    B:figurine=false
+    B:figurine.1=false
+    B:figurine.10=false
+    B:figurine.11=false
+    B:figurine.12=false
+    B:figurine.13=false
+    B:figurine.14=false
+    B:figurine.15=false
+    B:figurine.2=false
+    B:figurine.3=false
+    B:figurine.4=false
+    B:figurine.5=false
+    B:figurine.6=false
+    B:figurine.7=false
+    B:figurine.8=false
+    B:figurine.9=false
+    B:fossil=true
+    B:fossildrum=false
+    B:fossilworkbench=false
+    B:homeportal=false
+    B:icedStone=true
+    B:obsidianSpikes=false
+    B:palaeorapheLeaves=false
+    B:palaeorapheLog=true
+    B:palaeoraphePlanks=true
+    B:palaeorapheSapling=false
+    B:palaeorapheSlab=false
+    B:palaeorapheStairs=false
+    B:permafrost=false
+    B:plantbennettitaleslarge=false
+    B:plantbennettitalessmall=false
+    B:plantcephalotaxus=false
+    B:plantcrataegus=false
+    B:plantdillhoffia=false
+    B:plantephedra=false
+    B:plantflorissantia=false
+    B:planthorsetaillarge=false
+    B:planthorsetailsmall=false
+    B:plantlicopodiophyta=false
+    B:plantmutant=false
+    B:plantosmunda=false
+    B:plantpaleopanax=false
+    B:plantsarracina=false
+    B:planttempskya=false
+    B:plantvaccinium=false
+    B:plantwelwitschia=false
+    B:plantzamites=false
+    B:sarcophagus=false
+    B:sifter=false
+    B:sifterActive=false
+    B:skullBlock=false
+    B:skullLantern=false
+    B:slimeTrail=false
+    B:strongGlass=false
+    B:tar=false
+    B:timeMachine=false
+    B:vaseAmphora=false
+    B:vaseAmphora.1=false
+    B:vaseAmphora.2=false
+    B:vaseAmphora.3=false
+    B:vaseAmphora.4=false
+    B:vaseKylix=false
+    B:vaseKylix.1=false
+    B:vaseKylix.2=false
+    B:vaseKylix.3=false
+    B:vaseKylix.4=false
+    B:vaseVolute=false
+    B:vaseVolute.1=false
+    B:vaseVolute.2=false
+    B:vaseVolute.3=false
+    B:vaseVolute.4=false
+    B:volcanicAsh=true
+    B:volcanicBrick=true
+    B:volcanicRock=true
+    B:volcanicSlab=false
+    B:volcanicStairs=false
+    B:workbenchActive=false
 }
 
 
@@ -22212,6 +22338,7 @@ storagedrawers {
     B:trim.3=true
     B:trim.4=true
     B:trim.5=true
+    B:trimCustom=false
     B:trimSort=false
     B:trimSort.1=false
     B:trimSort.2=false
