--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -330,6 +330,8 @@ shedding {
     I:Duck.lexiconDisplaySize=40
     I:Duck.metadata=0
     I:Duck.rate=-1
+
+    # Configuration of Shedding for EAReplicator
     S:EAReplicator.item=
     I:EAReplicator.lexiconDisplaySize=40
     I:EAReplicator.metadata=0
@@ -2086,6 +2088,282 @@ shedding {
     I:failed_sheep.lexiconDisplaySize=40
     I:failed_sheep.metadata=0
     I:failed_sheep.rate=-1
+
+    # Configuration of Shedding for fossil.Alligator_Gar
+    S:fossil.Alligator_Gar.item=
+    I:fossil.Alligator_Gar.lexiconDisplaySize=40
+    I:fossil.Alligator_Gar.metadata=0
+    I:fossil.Alligator_Gar.rate=-1
+
+    # Configuration of Shedding for fossil.Allosaurus
+    S:fossil.Allosaurus.item=
+    I:fossil.Allosaurus.lexiconDisplaySize=40
+    I:fossil.Allosaurus.metadata=0
+    I:fossil.Allosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.Ankylosaurus
+    S:fossil.Ankylosaurus.item=
+    I:fossil.Ankylosaurus.lexiconDisplaySize=40
+    I:fossil.Ankylosaurus.metadata=0
+    I:fossil.Ankylosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.AnuDead
+    S:fossil.AnuDead.item=
+    I:fossil.AnuDead.lexiconDisplaySize=40
+    I:fossil.AnuDead.metadata=0
+    I:fossil.AnuDead.rate=-1
+
+    # Configuration of Shedding for fossil.AnuEffect
+    S:fossil.AnuEffect.item=
+    I:fossil.AnuEffect.lexiconDisplaySize=40
+    I:fossil.AnuEffect.metadata=0
+    I:fossil.AnuEffect.rate=-1
+
+    # Configuration of Shedding for fossil.Anubite
+    S:fossil.Anubite.item=
+    I:fossil.Anubite.lexiconDisplaySize=40
+    I:fossil.Anubite.metadata=0
+    I:fossil.Anubite.rate=-1
+
+    # Configuration of Shedding for fossil.Bones
+    S:fossil.Bones.item=
+    I:fossil.Bones.lexiconDisplaySize=40
+    I:fossil.Bones.metadata=0
+    I:fossil.Bones.rate=-1
+
+    # Configuration of Shedding for fossil.Brachiosaurus
+    S:fossil.Brachiosaurus.item=
+    I:fossil.Brachiosaurus.lexiconDisplaySize=40
+    I:fossil.Brachiosaurus.metadata=0
+    I:fossil.Brachiosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.Ceratosaurus
+    S:fossil.Ceratosaurus.item=
+    I:fossil.Ceratosaurus.lexiconDisplaySize=40
+    I:fossil.Ceratosaurus.metadata=0
+    I:fossil.Ceratosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.Coelacanth
+    S:fossil.Coelacanth.item=
+    I:fossil.Coelacanth.lexiconDisplaySize=40
+    I:fossil.Coelacanth.metadata=0
+    I:fossil.Coelacanth.rate=-1
+
+    # Configuration of Shedding for fossil.Compsognathus
+    S:fossil.Compsognathus.item=
+    I:fossil.Compsognathus.lexiconDisplaySize=40
+    I:fossil.Compsognathus.metadata=0
+    I:fossil.Compsognathus.rate=-1
+
+    # Configuration of Shedding for fossil.Confuciusornis
+    S:fossil.Confuciusornis.item=
+    I:fossil.Confuciusornis.lexiconDisplaySize=40
+    I:fossil.Confuciusornis.metadata=0
+    I:fossil.Confuciusornis.rate=-1
+
+    # Configuration of Shedding for fossil.Deinonychus
+    S:fossil.Deinonychus.item=
+    I:fossil.Deinonychus.lexiconDisplaySize=40
+    I:fossil.Deinonychus.metadata=0
+    I:fossil.Deinonychus.rate=-1
+
+    # Configuration of Shedding for fossil.Dilophosaurus
+    S:fossil.Dilophosaurus.item=
+    I:fossil.Dilophosaurus.lexiconDisplaySize=40
+    I:fossil.Dilophosaurus.metadata=0
+    I:fossil.Dilophosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.DinoEgg
+    S:fossil.DinoEgg.item=
+    I:fossil.DinoEgg.lexiconDisplaySize=40
+    I:fossil.DinoEgg.metadata=0
+    I:fossil.DinoEgg.rate=-1
+
+    # Configuration of Shedding for fossil.Dodo
+    S:fossil.Dodo.item=
+    I:fossil.Dodo.lexiconDisplaySize=40
+    I:fossil.Dodo.metadata=0
+    I:fossil.Dodo.rate=-1
+
+    # Configuration of Shedding for fossil.Elasmotherium
+    S:fossil.Elasmotherium.item=
+    I:fossil.Elasmotherium.lexiconDisplaySize=40
+    I:fossil.Elasmotherium.metadata=0
+    I:fossil.Elasmotherium.rate=-1
+
+    # Configuration of Shedding for fossil.Failuresaurus
+    S:fossil.Failuresaurus.item=
+    I:fossil.Failuresaurus.lexiconDisplaySize=40
+    I:fossil.Failuresaurus.metadata=0
+    I:fossil.Failuresaurus.rate=-1
+
+    # Configuration of Shedding for fossil.FriendlyPigZombie
+    S:fossil.FriendlyPigZombie.item=
+    I:fossil.FriendlyPigZombie.lexiconDisplaySize=40
+    I:fossil.FriendlyPigZombie.metadata=0
+    I:fossil.FriendlyPigZombie.rate=-1
+
+    # Configuration of Shedding for fossil.Gallimimus
+    S:fossil.Gallimimus.item=
+    I:fossil.Gallimimus.lexiconDisplaySize=40
+    I:fossil.Gallimimus.metadata=0
+    I:fossil.Gallimimus.rate=-1
+
+    # Configuration of Shedding for fossil.Gastornis
+    S:fossil.Gastornis.item=
+    I:fossil.Gastornis.lexiconDisplaySize=40
+    I:fossil.Gastornis.metadata=0
+    I:fossil.Gastornis.rate=-1
+
+    # Configuration of Shedding for fossil.Kelenken
+    S:fossil.Kelenken.item=
+    I:fossil.Kelenken.lexiconDisplaySize=40
+    I:fossil.Kelenken.metadata=0
+    I:fossil.Kelenken.rate=-1
+
+    # Configuration of Shedding for fossil.Liopleurodon
+    S:fossil.Liopleurodon.item=
+    I:fossil.Liopleurodon.lexiconDisplaySize=40
+    I:fossil.Liopleurodon.metadata=0
+    I:fossil.Liopleurodon.rate=-1
+
+    # Configuration of Shedding for fossil.Mammoth
+    S:fossil.Mammoth.item=
+    I:fossil.Mammoth.lexiconDisplaySize=40
+    I:fossil.Mammoth.metadata=0
+    I:fossil.Mammoth.rate=-1
+
+    # Configuration of Shedding for fossil.Mosasaurus
+    S:fossil.Mosasaurus.item=
+    I:fossil.Mosasaurus.lexiconDisplaySize=40
+    I:fossil.Mosasaurus.metadata=0
+    I:fossil.Mosasaurus.rate=-1
+
+    # Configuration of Shedding for fossil.Nautilus
+    S:fossil.Nautilus.item=
+    I:fossil.Nautilus.lexiconDisplaySize=40
+    I:fossil.Nautilus.metadata=0
+    I:fossil.Nautilus.rate=-1
+
+    # Configuration of Shedding for fossil.Pachycephalosaurus
+    S:fossil.Pachycephalosaurus.item=
+    I:fossil.Pachycephalosaurus.lexiconDisplaySize=40
+    I:fossil.Pachycephalosaurus.metadata=0
+    I:fossil.Pachycephalosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.Phorusrhacos
+    S:fossil.Phorusrhacos.item=
+    I:fossil.Phorusrhacos.lexiconDisplaySize=40
+    I:fossil.Phorusrhacos.metadata=0
+    I:fossil.Phorusrhacos.rate=-1
+
+    # Configuration of Shedding for fossil.PigBoss
+    S:fossil.PigBoss.item=
+    I:fossil.PigBoss.lexiconDisplaySize=40
+    I:fossil.PigBoss.metadata=0
+    I:fossil.PigBoss.rate=-1
+
+    # Configuration of Shedding for fossil.Plesiosaur
+    S:fossil.Plesiosaur.item=
+    I:fossil.Plesiosaur.lexiconDisplaySize=40
+    I:fossil.Plesiosaur.metadata=0
+    I:fossil.Plesiosaur.rate=-1
+
+    # Configuration of Shedding for fossil.Pterosaur
+    S:fossil.Pterosaur.item=
+    I:fossil.Pterosaur.lexiconDisplaySize=40
+    I:fossil.Pterosaur.metadata=0
+    I:fossil.Pterosaur.rate=-1
+
+    # Configuration of Shedding for fossil.Quagga
+    S:fossil.Quagga.item=
+    I:fossil.Quagga.lexiconDisplaySize=40
+    I:fossil.Quagga.metadata=0
+    I:fossil.Quagga.rate=-1
+
+    # Configuration of Shedding for fossil.Sarcosuchus
+    S:fossil.Sarcosuchus.item=
+    I:fossil.Sarcosuchus.lexiconDisplaySize=40
+    I:fossil.Sarcosuchus.metadata=0
+    I:fossil.Sarcosuchus.rate=-1
+
+    # Configuration of Shedding for fossil.SentryPigman
+    S:fossil.SentryPigman.item=
+    I:fossil.SentryPigman.lexiconDisplaySize=40
+    I:fossil.SentryPigman.metadata=0
+    I:fossil.SentryPigman.rate=-1
+
+    # Configuration of Shedding for fossil.Smilodon
+    S:fossil.Smilodon.item=
+    I:fossil.Smilodon.lexiconDisplaySize=40
+    I:fossil.Smilodon.metadata=0
+    I:fossil.Smilodon.rate=-1
+
+    # Configuration of Shedding for fossil.Spinosaurus
+    S:fossil.Spinosaurus.item=
+    I:fossil.Spinosaurus.lexiconDisplaySize=40
+    I:fossil.Spinosaurus.metadata=0
+    I:fossil.Spinosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.Stegosaurus
+    S:fossil.Stegosaurus.item=
+    I:fossil.Stegosaurus.lexiconDisplaySize=40
+    I:fossil.Stegosaurus.metadata=0
+    I:fossil.Stegosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.Sturgeon
+    S:fossil.Sturgeon.item=
+    I:fossil.Sturgeon.lexiconDisplaySize=40
+    I:fossil.Sturgeon.metadata=0
+    I:fossil.Sturgeon.rate=-1
+
+    # Configuration of Shedding for fossil.TarSlime
+    S:fossil.TarSlime.item=
+    I:fossil.TarSlime.lexiconDisplaySize=40
+    I:fossil.TarSlime.metadata=0
+    I:fossil.TarSlime.rate=-1
+
+    # Configuration of Shedding for fossil.Titanis
+    S:fossil.Titanis.item=
+    I:fossil.Titanis.lexiconDisplaySize=40
+    I:fossil.Titanis.metadata=0
+    I:fossil.Titanis.rate=-1
+
+    # Configuration of Shedding for fossil.ToyBall
+    S:fossil.ToyBall.item=
+    I:fossil.ToyBall.lexiconDisplaySize=40
+    I:fossil.ToyBall.metadata=0
+    I:fossil.ToyBall.rate=-1
+
+    # Configuration of Shedding for fossil.ToyScratchingPost
+    S:fossil.ToyScratchingPost.item=
+    I:fossil.ToyScratchingPost.lexiconDisplaySize=40
+    I:fossil.ToyScratchingPost.metadata=0
+    I:fossil.ToyScratchingPost.rate=-1
+
+    # Configuration of Shedding for fossil.ToyTetheredLog
+    S:fossil.ToyTetheredLog.item=
+    I:fossil.ToyTetheredLog.lexiconDisplaySize=40
+    I:fossil.ToyTetheredLog.metadata=0
+    I:fossil.ToyTetheredLog.rate=-1
+
+    # Configuration of Shedding for fossil.Triceratops
+    S:fossil.Triceratops.item=
+    I:fossil.Triceratops.lexiconDisplaySize=40
+    I:fossil.Triceratops.metadata=0
+    I:fossil.Triceratops.rate=-1
+
+    # Configuration of Shedding for fossil.Tyrannosaurus
+    S:fossil.Tyrannosaurus.item=
+    I:fossil.Tyrannosaurus.lexiconDisplaySize=40
+    I:fossil.Tyrannosaurus.metadata=0
+    I:fossil.Tyrannosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.Velociraptor
+    S:fossil.Velociraptor.item=
+    I:fossil.Velociraptor.lexiconDisplaySize=40
+    I:fossil.Velociraptor.metadata=0
+    I:fossil.Velociraptor.rate=-1
 
     # Configuration of Shedding for headcrumbs.Human
     S:headcrumbs.Human.item=
