--- a/config/DraconicEvolution.cfg
+++ b/config/DraconicEvolution.cfg
@@ -52,6 +52,9 @@ general {
         0
      >
 
+    # Set this to false to disable flight given by draconic armor.
+    B:"Enable Flight"=false
+
     # Set to false to disable the version checker
     B:"Enable version checker"=false
 
