--- a/config/MatterOverdrive/Matter Overdrive.cfg
+++ b/config/MatterOverdrive/Matter Overdrive.cfg
@@ -181,7 +181,7 @@ entities {
             Savanna Plateau
             Mesa
             Mesa Plateau
-            Mesa Plateau For
+            Mesa Plateau F
             Ender Forest
             Rainbow Forest
             Desert Oil Field
