--- a/config/neiintegration.cfg
+++ b/config/neiintegration.cfg
@@ -10,6 +10,8 @@ handlers {
 
 
 integrations {
+    # Whether to enable Electrical Age integration. Disable if this part of the mod causes crashes.
+    B:"Electrical Age"=true
     B:Forestry=true
 
     # Whether to enable Minecraft / Forge integration. Disable if this part of the mod causes crashes.
