--- a/config/rftools/dimlets.cfg
+++ b/config/rftools/dimlets.cfg
@@ -97,6 +97,7 @@ dimletsettings {
     I:rarity.Material.tile.Ore7=3
     I:rarity.Material.tile.Ore8=3
     I:rarity.Material.tile.OreBlock=3
+    I:rarity.Material.tile.OreEln5=3
     I:rarity.Material.tile.appliedenergistics2.OreQuartz=3
     I:rarity.Material.tile.blockCoal=4
     I:rarity.Material.tile.blockCustomOre=3
@@ -296,6 +297,7 @@ dimletsettings {
     I:rfcreate.Material.tile.Ore7=10000
     I:rfcreate.Material.tile.Ore8=10000
     I:rfcreate.Material.tile.OreBlock=12000
+    I:rfcreate.Material.tile.OreEln5=40000
     I:rfcreate.Material.tile.appliedenergistics2.OreQuartz=8000
     I:rfcreate.Material.tile.blockCoal=13000
     I:rfcreate.Material.tile.blockCustomOre=12000
@@ -501,6 +503,7 @@ dimletsettings {
     I:rfmaintain.Material.tile.Ore7=1800
     I:rfmaintain.Material.tile.Ore8=1800
     I:rfmaintain.Material.tile.OreBlock=2500
+    I:rfmaintain.Material.tile.OreEln5=10000
     I:rfmaintain.Material.tile.appliedenergistics2.OreQuartz=1800
     I:rfmaintain.Material.tile.blockCoal=5000
     I:rfmaintain.Material.tile.blockCustomOre=1800
@@ -704,6 +707,7 @@ dimletsettings {
     I:ticks.Material.tile.Ore7=400
     I:ticks.Material.tile.Ore8=400
     I:ticks.Material.tile.OreBlock=400
+    I:ticks.Material.tile.OreEln5=800
     I:ticks.Material.tile.appliedenergistics2.OreQuartz=400
     I:ticks.Material.tile.blockCoal=200
     I:ticks.Material.tile.blockCustomOre=400
