--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -2185,6 +2185,12 @@ shedding {
     I:fossil.Dodo.metadata=0
     I:fossil.Dodo.rate=-1
 
+    # Configuration of Shedding for fossil.Dryosaurus
+    S:fossil.Dryosaurus.item=
+    I:fossil.Dryosaurus.lexiconDisplaySize=40
+    I:fossil.Dryosaurus.metadata=0
+    I:fossil.Dryosaurus.rate=-1
+
     # Configuration of Shedding for fossil.Elasmotherium
     S:fossil.Elasmotherium.item=
     I:fossil.Elasmotherium.lexiconDisplaySize=40
@@ -2250,6 +2256,12 @@ shedding {
     I:fossil.Pachycephalosaurus.lexiconDisplaySize=40
     I:fossil.Pachycephalosaurus.metadata=0
     I:fossil.Pachycephalosaurus.rate=-1
+
+    # Configuration of Shedding for fossil.Parasaurolophus
+    S:fossil.Parasaurolophus.item=
+    I:fossil.Parasaurolophus.lexiconDisplaySize=40
+    I:fossil.Parasaurolophus.metadata=0
+    I:fossil.Parasaurolophus.rate=-1
 
     # Configuration of Shedding for fossil.Phorusrhacos
     S:fossil.Phorusrhacos.item=
@@ -2322,6 +2334,12 @@ shedding {
     I:fossil.TarSlime.lexiconDisplaySize=40
     I:fossil.TarSlime.metadata=0
     I:fossil.TarSlime.rate=-1
+
+    # Configuration of Shedding for fossil.Therizinosaurus
+    S:fossil.Therizinosaurus.item=
+    I:fossil.Therizinosaurus.lexiconDisplaySize=40
+    I:fossil.Therizinosaurus.metadata=0
+    I:fossil.Therizinosaurus.rate=-1
 
     # Configuration of Shedding for fossil.Titanis
     S:fossil.Titanis.item=
