--- a/config/butterflymania.cfg
+++ b/config/butterflymania.cfg
@@ -21,7 +21,16 @@ entitynames {
     S:guardian=Guardian
 }
 
-    I:extinct-88=23
+
+world--6053546774151357621 {
+    I:extinct-115=29
+    I:extinct-134=21
+    I:extinct-148=16
+    I:extinct-154=28
+    I:extinct-156=22
+    I:extinct-201=17
+    I:extinct-43=30
+    I:extinct-88=14
 }
 
 
