--- a/config/fossil.cfg
+++ b/config/fossil.cfg
@@ -10,19 +10,22 @@ dinosaurs {
     #  [default: false]
     B:eggsLikeChickens=false
 
-    #  [default: false]
+    #  [default: true]
     B:featheredCompsognathus=false
 
-    #  [default: false]
+    #  [default: true]
     B:featheredDeinonychus=false
 
-    #  [default: false]
+    #  [default: true]
     B:featheredGallimimus=false
 
-    #  [default: false]
+    #  [default: true]
     B:featheredTRex=false
 
-    #  [default: false]
+    #  [default: true]
+    B:featheredTherizinosaurus=true
+
+    #  [default: true]
     B:featheredVelociraptor=false
 
     #  [default: true]
@@ -51,17 +54,11 @@ general {
 
     #  [default: true]
     B:allowBreeding=true
-
-    #  [default: false]
     B:allowFlying=false
 
     #  [default: true]
     B:allowTableEnchantments=true
-
-    #  [default: false]
     B:anuAllowedOverworld=false
-
-    #  [default: false]
     B:anuSpawn=false
 
     #  [default: true]
@@ -89,7 +86,7 @@ generation {
     B:generateAztecWeaponShops=false
 
     #  [default: true]
-    B:generateFossilSites=true
+    B:generateFossilSites=false
 
     #  [default: true]
     B:generateFossils=true
