--- a/config/enviromine/profiles/default/CustomProperties/ExtraUtilities.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/ExtraUtilities.cfg
@@ -23,6 +23,21 @@ blocks {
         B:"12.Slides When Wet"=false
     }
 
+    "tile_extrautils:drum_drum" {
+        S:01.Name=ExtraUtilities:drum
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
 }
 
 
