--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4369,6 +4369,9 @@ chromaticraft {
     B:chromaticraftblockantkey.3=false
     B:chromaticraftblockantkey.5=false
     B:chromaticraftblockantkey.7=false
+    B:chromaticraftblockavolamp=false
+    B:chromaticraftblockbridge=false
+    B:chromaticraftblockbridgecontrol=false
     B:chromaticraftblockchroma=false
     B:chromaticraftblockcoloraltar=false
     B:chromaticraftblockcolorlock=false
@@ -4391,6 +4394,7 @@ chromaticraft {
     B:chromaticraftblockdyesapling.4=false
     B:chromaticraftblockdyesapling.5=false
     B:chromaticraftblockender=false
+    B:chromaticraftblockeverfluid=false
     B:chromaticraftblockfence=false
     B:chromaticraftblockglass=false
     B:chromaticraftblockglow=false
@@ -4414,13 +4418,16 @@ chromaticraft {
     B:chromaticraftblocklampblock=false
     B:chromaticraftblocklasereffect=false
     B:chromaticraftblocklight=false
+    B:chromaticraftblocklightpanel=true
     B:chromaticraftblocklockfence=false
     B:chromaticraftblocklockfreeze=false
     B:chromaticraftblocklockkey=false
     B:chromaticraftblocklootchest=false
+    B:chromaticraftblockluma=false
     B:chromaticraftblockmusicmemory=false
     B:chromaticraftblockmusictrigger=true
     B:chromaticraftblockpad=true
+    B:chromaticraftblockpanelswitch=false
     B:chromaticraftblockpath=true
     B:chromaticraftblockpinball=false
     B:chromaticraftblockplant=false
@@ -4432,11 +4439,14 @@ chromaticraft {
     B:chromaticraftblockrainbowleaf=false
     B:chromaticraftblockrainbowsapling=false
     B:chromaticraftblockrelay=false
+    B:chromaticraftblockrelayfilter=false
     B:chromaticraftblockrift=false
+    B:chromaticraftblockrouternode=false
     B:chromaticraftblockrune=true
     B:chromaticraftblockselectiveglass=false
     B:chromaticraftblockshiftkey=false
     B:chromaticraftblockshiftlock=false
+    B:chromaticraftblocksparkle=true
     B:chromaticraftblockspecialshield=false
     B:chromaticraftblockstorage=true
     B:chromaticraftblockstructshield=false
@@ -4449,6 +4459,7 @@ chromaticraft {
     B:chromaticraftblocktieredore.11=true
     B:chromaticraftblocktieredore.12=true
     B:chromaticraftblocktieredore.13=true
+    B:chromaticraftblocktieredore.14=true
     B:chromaticraftblocktieredore.2=true
     B:chromaticraftblocktieredore.3=true
     B:chromaticraftblocktieredore.4=true
@@ -4467,6 +4478,7 @@ chromaticraft {
     B:chromaticraftblocktilecrystal=false
     B:chromaticraftblocktilecrystalnoncube=false
     B:chromaticraftblocktileentity=false
+    B:chromaticraftblocktileentity2=false
     B:chromaticraftblocktilemodelled=false
     B:chromaticraftblocktilemodelled2=false
     B:chromaticraftblocktilemodelled3=false
@@ -4978,6 +4990,7 @@ eln {
     B:ElnSixNode.6272=false
     B:ElnSixNode.6276=false
     B:ElnSixNode.6277=false
+    B:ElnSixNode.6278=false
     B:ElnSixNode.6400=false
     B:ElnSixNode.6401=false
     B:ElnSixNode.6464=false
