--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -2221,6 +2221,18 @@ shedding {
     I:fossil.Gastornis.metadata=0
     I:fossil.Gastornis.rate=-1
 
+    # Configuration of Shedding for fossil.Henodus
+    S:fossil.Henodus.item=
+    I:fossil.Henodus.lexiconDisplaySize=40
+    I:fossil.Henodus.metadata=0
+    I:fossil.Henodus.rate=-1
+
+    # Configuration of Shedding for fossil.Icthyosaurus
+    S:fossil.Icthyosaurus.item=
+    I:fossil.Icthyosaurus.lexiconDisplaySize=40
+    I:fossil.Icthyosaurus.metadata=0
+    I:fossil.Icthyosaurus.rate=-1
+
     # Configuration of Shedding for fossil.Kelenken
     S:fossil.Kelenken.item=
     I:fossil.Kelenken.lexiconDisplaySize=40
