--- a/config/RTG/rtg.cfg
+++ b/config/RTG/rtg.cfg
@@ -277,6 +277,11 @@ saplings {
 
 
 "scattered features" {
+    # Must be set to TRUE for the other scattered feature settings to have any effect.
+    # If FALSE, RTG won't interfere with scattered feature generation at all.
+    #  [default: true]
+    B:"Enable Scattered Feature Modifications"=true
+
     #  [default: true]
     B:"Generate Scattered Features"=true
 
@@ -396,7 +401,7 @@ volcanoes {
     I:"Volcano block meta value"=0
 
     # The block ID of the 1st volcano mix block.
-    #  [default: BiomesOPlenty:ashStone]
+    #  [default: minecraft:cobblestone]
     S:"Volcano mix 1 block ID"=BiomesOPlenty:ashStone
 
     # The meta value of the 1st volcano mix block.
@@ -404,7 +409,7 @@ volcanoes {
     I:"Volcano mix 1 block meta value"=0
 
     # The block ID of the 2nd volcano mix block.
-    #  [default: BiomesOPlenty:ash]
+    #  [default: minecraft:gravel]
     S:"Volcano mix 2 block ID"=BiomesOPlenty:ash
 
     # The meta value of the 2nd volcano mix block.
