--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -2,12 +2,12 @@
 
 "biome ids" {
     I:"Ender Forest Biome ID"=47
+    S:"Luminous Cliffs Biome ID"=49
     I:"Rainbow Forest Biome ID"=48
 }
 
 
 "client specific" {
-    B:"[B72018891] Biome FX"=true
     B:"[CD9801A43] Connected Crystalline Stone Textures"=false
     B:"[D77120039] Dye Block Particles"=true
     B:"[DE2E76572] Disable Pendant Particles"=true
@@ -46,6 +46,7 @@
     B:"Guardian Stone is Full Chunk Height"=false
     B:"Liquid Ender Effect"=true
     I:"Lumen Relay Range"=16
+    I:"Luminous Cliffs Biome Weight"=4
     B:"Make Pylon pathfinding attempt shortest path - can be intensive"=false
     B:"Make ThaumCraft integration require ThaumCraft progression"=true
     I:"Max Accelerator Lag in NanoSeconds"=1000000
@@ -75,6 +76,7 @@
     I:"Glowing Forest Biome ID"=203
     I:"Island Biome ID"=101
     I:"Skyland Biome ID"=100
+    S:"Sparkling Sands Biome ID"=110
     I:"Structure Biome ID"=207
     I:"Voidland Biome ID"=208
 }
@@ -82,7 +84,11 @@
 
 "enchantment ids" {
     I:"Aggro Mask ID"=92
+    S:"Air Miner ID"=97
     I:"Ender Lock ID"=91
+    S:"Harvest Boost ID"=96
+    S:"Rapid Descent ID"=95
+    S:"Rare Loot ID"=94
     I:"Use Repair ID"=93
     I:"Weapon AOE ID"=90
 }
@@ -161,6 +167,7 @@
 
 
 "other ids" {
+    S:"Chromastone Material ID"=90
     I:"Dimension ID"=60
 }
 
@@ -180,6 +187,7 @@
     S:"Lumarhea ID"=64
     I:"Regen ID"=39
     I:"Saturation ID"=38
+    S:"Void Gaze ID"=41
 }
 
 
