--- a/config/fossil.cfg
+++ b/config/fossil.cfg
@@ -30,6 +30,9 @@ dinosaurs {
 
     #  [default: true]
     B:quilledTriceratops=true
+
+    #  [default: true]
+    B:sleepingParticles=true
 }
 
 
@@ -107,7 +110,7 @@ generation {
     B:generateShips=true
 
     #  [default: true]
-    B:generateTarSites=true
+    B:generateTarSites=false
 
     #  [default: true]
     B:generateTemple=false
