--- a/config/Eln.cfg
+++ b/config/Eln.cfg
@@ -7,9 +7,13 @@ balancing {
 
     # Maximum horizontal distance from autominer that will be mined
     I:autominerRange=10
+    D:batteryCapacityFactor=1.0
     I:fuelGeneratorPowerFactor=1
     I:heatTurbinePowerFactor=1
     I:solarPannelPowerFactor=1
+
+    # Display more detailed WAILA info on some machines
+    B:wailaEasyMode=false
     I:waterTurbinePowerFactor=1
     I:windTurbinePowerFactor=1
 }
