--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -22,16 +22,19 @@
     B:"Admins Bypass Permissions"=true
     B:"Attempt to Repair Environment Sanity"=true
     I:"Automatic Reboot Interval (Seconds)"=-1
+    B:"Cache Skins"=true
     B:"Check Environment Sanity"=true
     B:"Compare mod file hashes between client and server"=true
     B:"Direct OpenComputers Support"=true
     B:"Disallow Null-Item ItemStacks to Prevent Crashes"=true
+    B:"Extra Block Ticks When Raining"=true
     B:"Force Gregtech Ore Compatibility"=true
     B:"Log Sync Packet CME Avoidance"=true
     B:"Merge XP Orbs Like Items"=true
     I:"Minimum Delay (ms) for 'Can't Keep Up!' Log Warning"=0
     B:"Only show update notice to Ops or SSP"=true
     B:"Only show update notice to pack creator"=true
+    B:"Prevent Mobs From Targeting Players Immediately After Logging In"=true
     B:"Restore Obsidian Blast Resistance"=true
     B:"Slow Sync Packets - Only use this as a last resort"=false
     I:"Sync Packet ID"=182
