--- a/config/craftingtweaks.cfg
+++ b/config/craftingtweaks.cfg
@@ -9,6 +9,7 @@
 addons {
     # enabled, buttons_only, hotkeys_only or disabled [default: enabled]
     S:minecraft=enabled
+    S:BuildCraft|Factory=disabled
 }
 
 
