Fixed up world gen

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -18652,6 +18652,12 @@ mariculture {
 }
 
 
+mcheli {
+    B:draftingtable=false
+    B:litdraftingtable=false
+}
+
+
 mekanism {
     B:BasicBlock=false
     B:BasicBlock.1=false
@@ -22054,6 +22060,133 @@ rftools {
 }
 
 
+roadstuff {
+    B:asphaltArrow=true
+    B:asphaltArrow.1=true
+    B:asphaltArrow.2=true
+    B:asphaltArrow.3=true
+    B:asphaltArrow2=true
+    B:asphaltArrow2.1=true
+    B:asphaltArrow2.2=true
+    B:asphaltArrow2.3=true
+    B:asphaltBlock=true
+    B:asphaltBlock.1=true
+    B:asphaltCorner=true
+    B:asphaltCorner.1=true
+    B:asphaltCorner.2=true
+    B:asphaltCorner.3=true
+    B:asphaltCorner2=true
+    B:asphaltCorner2.1=true
+    B:asphaltCorner2.2=true
+    B:asphaltCorner2.3=true
+    B:asphaltCorner3=true
+    B:asphaltCorner3.1=true
+    B:asphaltCorner3.2=true
+    B:asphaltCorner3.3=true
+    B:asphaltLine=true
+    B:asphaltLine.1=true
+    B:asphaltLine.2=true
+    B:asphaltLine.3=true
+    B:asphaltLine.4=true
+    B:asphaltLine.5=true
+    B:asphaltWordExit=true
+    B:asphaltWordExit.1=true
+    B:asphaltWordExit.2=true
+    B:asphaltWordExit.3=true
+    B:asphaltXCross=true
+    B:asphaltXCross.1=true
+    B:asphaltXCross.2=true
+    B:asphaltXCross.3=true
+    B:asphaltXCrossYellow=true
+    B:asphaltXCrossYellow.1=true
+    B:asphaltXCrossYellow.2=true
+    B:asphaltXCrossYellow.3=true
+    B:asphaltYCross=true
+    B:asphaltYCross.1=true
+    B:asphaltYCross.2=true
+    B:asphaltYCross.3=true
+    B:asphaltYCrossYellow=true
+    B:asphaltYCrossYellow.1=true
+    B:asphaltYCrossYellow.2=true
+    B:asphaltYCrossYellow.3=true
+    B:bitumenBlock=true
+    B:bitumenOre=true
+    B:concreteArrow=true
+    B:concreteArrow.1=true
+    B:concreteArrow.2=true
+    B:concreteArrow.3=true
+    B:concreteArrow2=true
+    B:concreteArrow2.1=true
+    B:concreteArrow2.2=true
+    B:concreteArrow2.3=true
+    B:concreteBlock=true
+    B:concreteBlock.1=true
+    B:concreteCorner=true
+    B:concreteCorner.1=true
+    B:concreteCorner.2=true
+    B:concreteCorner.3=true
+    B:concreteCorner2=true
+    B:concreteCorner2.1=true
+    B:concreteCorner2.2=true
+    B:concreteCorner2.3=true
+    B:concreteCorner3=true
+    B:concreteCorner3.1=true
+    B:concreteCorner3.2=true
+    B:concreteCorner3.3=true
+    B:concreteLine=true
+    B:concreteLine.1=true
+    B:concreteLine.2=true
+    B:concreteLine.3=true
+    B:concreteLine.4=true
+    B:concreteLine.5=true
+    B:concreteXCross=true
+    B:concreteXCross.1=true
+    B:concreteXCross.2=true
+    B:concreteXCross.3=true
+    B:concreteXCrossYellow=true
+    B:concreteXCrossYellow.1=true
+    B:concreteXCrossYellow.2=true
+    B:concreteXCrossYellow.3=true
+    B:concreteYCross=true
+    B:concreteYCross.1=true
+    B:concreteYCross.2=true
+    B:concreteYCross.3=true
+    B:concreteYCrossYellow=true
+    B:concreteYCrossYellow.1=true
+    B:concreteYCrossYellow.2=true
+    B:concreteYCrossYellow.3=true
+    B:cone=false
+    B:cone.1=false
+    B:cone.2=false
+    B:reflector=false
+    B:reflector.1=false
+    B:reflector.2=false
+    B:reflector.3=false
+    B:singleSlabAsphalt=false
+    B:singleSlabAsphalt.1=false
+    B:singleSlabAsphaltCorner=false
+    B:singleSlabAsphaltCorner.1=false
+    B:singleSlabAsphaltCornerDouble=false
+    B:singleSlabAsphaltCornerDouble.1=false
+    B:singleSlabAsphaltLine=false
+    B:singleSlabAsphaltLine.1=false
+    B:singleSlabAsphaltLine.2=false
+    B:singleSlabAsphaltLine.3=false
+    B:singleSlabConcrete=false
+    B:singleSlabConcrete.1=false
+    B:singleSlabConcreteCorner=false
+    B:singleSlabConcreteCorner.1=false
+    B:singleSlabConcreteCornerDouble=false
+    B:singleSlabConcreteCornerDouble.1=false
+    B:singleSlabConcreteLine=false
+    B:singleSlabConcreteLine.1=false
+    B:singleSlabConcreteLine.2=false
+    B:singleSlabConcreteLine.3=false
+    B:trafficSign=false
+    B:trafficSign.1=false
+}
+
+
 rotarycraft {
     B:rotarycraftblockadvancedgear=false
     B:rotarycraftblockbasic=false
@@ -23598,6 +23731,94 @@ tconstruct {
     B:trapbarricadeoak=false
     B:trapbarricadespruce=false
     B:trappunji=false
+}
+
+
+techguns {
+    B:BioBlobSmall=false
+    B:TGMonsterSpawner=false
+    B:acid=false
+    B:airMarker=false
+    B:basicMachine=false
+    B:basicMachine.1=false
+    B:basicMachine.2=false
+    B:basicMachine.3=false
+    B:basicMachine.4=false
+    B:basicMachine.5=false
+    B:basicMachine.6=false
+    B:basicMachine.8=false
+    B:basicMachine.9=false
+    B:bugnest=true
+    B:bugnesteggs=true
+    B:bugnestslimy=false
+    B:camoNetPane=false
+    B:camoNetPane.1=false
+    B:camoNetPane.2=false
+    B:camoNetRoof=false
+    B:camoNetRoof.1=false
+    B:camoNetRoof.2=false
+    B:concrete=true
+    B:concrete.1=true
+    B:concrete.2=true
+    B:concrete.3=true
+    B:concrete.4=true
+    B:concrete.5=true
+    B:concrete.6=true
+    B:container=true
+    B:container.1=true
+    B:container.2=true
+    B:container.3=true
+    B:container.4=true
+    B:container.5=true
+    B:controlpanel=true
+    B:door01=false
+    B:ladder01=false
+    B:ladder01.12=false
+    B:ladder01.4=false
+    B:ladder01.8=false
+    B:lamp01=false
+    B:lamp01.15=false
+    B:lamp01.7=false
+    B:lamp01.8=false
+    B:machineMultiBlock=false
+    B:machineMultiBlock.1=false
+    B:machineMultiBlock.2=false
+    B:machineMultiBlock.3=false
+    B:machineMultiBlock.4=false
+    B:machineMultiBlock.5=false
+    B:metalpanel=true
+    B:metalpanel.1=true
+    B:metalpanel.2=true
+    B:metalpanel.3=true
+    B:metalpanel.4=true
+    B:metalpanel.5=true
+    B:metalpanel.6=true
+    B:metalpanel.7=true
+    B:metalpanel2=true
+    B:metalpanel2.1=true
+    B:metalpanel2.2=true
+    B:metalpanel2.3=true
+    B:metalpanel2.4=true
+    B:metalpanel2.5=true
+    B:metalpanel2.6=true
+    B:oreCluster=true
+    B:oreCluster.1=true
+    B:oreCluster.2=true
+    B:oreCluster.3=true
+    B:oreCluster.4=true
+    B:oreCluster.5=true
+    B:oreCluster.6=true
+    B:oreCluster2=true
+    B:oreCluster2.1=true
+    B:oreDrill=false
+    B:oreDrill.1=false
+    B:oreDrill.2=false
+    B:oreDrill.3=false
+    B:oreDrill.4=false
+    B:oreTitanIron=true
+    B:oreTitanIron.1=true
+    B:sandbags=false
+    B:screen=true
 }
 
 
