--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -1095,6 +1095,12 @@ shedding {
     I:SnowMan.metadata=0
     I:SnowMan.rate=-1
 
+    # Configuration of Shedding for Souls.Soul
+    S:Souls.Soul.item=
+    I:Souls.Soul.lexiconDisplaySize=40
+    I:Souls.Soul.metadata=0
+    I:Souls.Soul.rate=-1
+
     # Configuration of Shedding for Spider
     S:Spider.item=minecraft:string
     I:Spider.lexiconDisplaySize=40
@@ -1124,6 +1130,102 @@ shedding {
     I:TConstruct.KingSlime.lexiconDisplaySize=40
     I:TConstruct.KingSlime.metadata=0
     I:TConstruct.KingSlime.rate=-1
+
+    # Configuration of Shedding for Techguns.AlienBug
+    S:Techguns.AlienBug.item=
+    I:Techguns.AlienBug.lexiconDisplaySize=40
+    I:Techguns.AlienBug.metadata=0
+    I:Techguns.AlienBug.rate=-1
+
+    # Configuration of Shedding for Techguns.ArmySoldier
+    S:Techguns.ArmySoldier.item=
+    I:Techguns.ArmySoldier.lexiconDisplaySize=40
+    I:Techguns.ArmySoldier.metadata=0
+    I:Techguns.ArmySoldier.rate=-1
+
+    # Configuration of Shedding for Techguns.AttackHelicopter
+    S:Techguns.AttackHelicopter.item=
+    I:Techguns.AttackHelicopter.lexiconDisplaySize=40
+    I:Techguns.AttackHelicopter.metadata=0
+    I:Techguns.AttackHelicopter.rate=-1
+
+    # Configuration of Shedding for Techguns.Bandit
+    S:Techguns.Bandit.item=
+    I:Techguns.Bandit.lexiconDisplaySize=40
+    I:Techguns.Bandit.metadata=0
+    I:Techguns.Bandit.rate=-1
+
+    # Configuration of Shedding for Techguns.CyberDemon
+    S:Techguns.CyberDemon.item=
+    I:Techguns.CyberDemon.lexiconDisplaySize=40
+    I:Techguns.CyberDemon.metadata=0
+    I:Techguns.CyberDemon.rate=-1
+
+    # Configuration of Shedding for Techguns.Dictator Dave
+    S:"Techguns.Dictator Dave.item"=
+    I:"Techguns.Dictator Dave.lexiconDisplaySize"=40
+    I:"Techguns.Dictator Dave.metadata"=0
+    I:"Techguns.Dictator Dave.rate"=-1
+
+    # Configuration of Shedding for Techguns.Outcast
+    S:Techguns.Outcast.item=
+    I:Techguns.Outcast.lexiconDisplaySize=40
+    I:Techguns.Outcast.metadata=0
+    I:Techguns.Outcast.rate=-1
+
+    # Configuration of Shedding for Techguns.Psycho Steve
+    S:"Techguns.Psycho Steve.item"=
+    I:"Techguns.Psycho Steve.lexiconDisplaySize"=40
+    I:"Techguns.Psycho Steve.metadata"=0
+    I:"Techguns.Psycho Steve.rate"=-1
+
+    # Configuration of Shedding for Techguns.SimpleTurret
+    S:Techguns.SimpleTurret.item=
+    I:Techguns.SimpleTurret.lexiconDisplaySize=40
+    I:Techguns.SimpleTurret.metadata=0
+    I:Techguns.SimpleTurret.rate=-1
+
+    # Configuration of Shedding for Techguns.Skeleton Soldier
+    S:"Techguns.Skeleton Soldier.item"=
+    I:"Techguns.Skeleton Soldier.lexiconDisplaySize"=40
+    I:"Techguns.Skeleton Soldier.metadata"=0
+    I:"Techguns.Skeleton Soldier.rate"=-1
+
+    # Configuration of Shedding for Techguns.TGDummySpawn
+    S:Techguns.TGDummySpawn.item=
+    I:Techguns.TGDummySpawn.lexiconDisplaySize=40
+    I:Techguns.TGDummySpawn.metadata=0
+    I:Techguns.TGDummySpawn.rate=-1
+
+    # Configuration of Shedding for Techguns.Turret
+    S:Techguns.Turret.item=
+    I:Techguns.Turret.lexiconDisplaySize=40
+    I:Techguns.Turret.metadata=0
+    I:Techguns.Turret.rate=-1
+
+    # Configuration of Shedding for Techguns.ZombieFarmer
+    S:Techguns.ZombieFarmer.item=
+    I:Techguns.ZombieFarmer.lexiconDisplaySize=40
+    I:Techguns.ZombieFarmer.metadata=0
+    I:Techguns.ZombieFarmer.rate=-1
+
+    # Configuration of Shedding for Techguns.ZombieMiner
+    S:Techguns.ZombieMiner.item=
+    I:Techguns.ZombieMiner.lexiconDisplaySize=40
+    I:Techguns.ZombieMiner.metadata=0
+    I:Techguns.ZombieMiner.rate=-1
+
+    # Configuration of Shedding for Techguns.ZombiePigmanSoldier
+    S:Techguns.ZombiePigmanSoldier.item=
+    I:Techguns.ZombiePigmanSoldier.lexiconDisplaySize=40
+    I:Techguns.ZombiePigmanSoldier.metadata=0
+    I:Techguns.ZombiePigmanSoldier.rate=-1
+
+    # Configuration of Shedding for Techguns.ZombieSoldier
+    S:Techguns.ZombieSoldier.item=
+    I:Techguns.ZombieSoldier.lexiconDisplaySize=40
+    I:Techguns.ZombieSoldier.metadata=0
+    I:Techguns.ZombieSoldier.rate=-1
     S:Tentacles.item=
     I:Tentacles.lexiconDisplaySize=40
     I:Tentacles.metadata=0
@@ -2552,8 +2654,6 @@ shedding {
     I:jurassicraft.velociraptor.lexiconDisplaySize=40
     I:jurassicraft.velociraptor.metadata=0
     I:jurassicraft.velociraptor.rate=-1
-
-    # Configuration of Shedding for lootablebodies_EntityLootableBody
     S:lootablebodies_EntityLootableBody.item=
     I:lootablebodies_EntityLootableBody.lexiconDisplaySize=40
     I:lootablebodies_EntityLootableBody.metadata=0
