--- a/config/butterflymania.cfg
+++ b/config/butterflymania.cfg
@@ -34,3 +34,27 @@ world--6053546774151357621 {
 }
 
 
+world-3542167839976514568 {
+    I:extinct-115=5
+    I:extinct-134=5
+    I:extinct-148=4
+    I:extinct-154=5
+    I:extinct-156=3
+    I:extinct-201=4
+    I:extinct-43=3
+    I:extinct-88=4
+}
+
+
+world-8825644040694357831 {
+    I:extinct-115=13
+    I:extinct-134=26
+    I:extinct-148=21
+    I:extinct-154=23
+    I:extinct-156=28
+    I:extinct-201=20
+    I:extinct-43=27
+    I:extinct-88=18
+}
+
+
